src/objects/MYBZ_District__c.object
<CustomObject>
    <fields>
        <fullName>Global_Id__c</fullName>
        <label>Global Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRx__c</fullName>
        <label>NRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Profit__c</fullName>
        <label>Net Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX__c</fullName>
        <label>OPEX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>MYBZ_Product__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <picklist>
            <picklistValues>
                <fullName>oneMonthData</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>threeMonthData</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sixMonthData</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>MYBZ_Region__c</referenceTo>
        <relationshipName>State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRx__c</fullName>
        <label>TRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Range__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>